# cpp_ci_pipeline

./: .travis.yml  CMakeLists.txt  build.sh  build.xml  calculator.cpp  sonar-project.properties
lib/: CMakeLists.txt
src/: calculator.cpp  calculator.h
tst/: calculator-test.cpp  main.cpp
